--- a/build.gradle
+++ b/build.gradle
@@ -45,3 +45,9 @@ task simple_test(type: Test) {
         includeTags("simple")
     }
 }
+
+task remote_test(type: Test) {
+    useJUnitPlatform{
+        includeTags("remote")
+    }
+}
